<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header">

        <Button
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50sp"
            android:onClick="galleryOnClick"
            android:text="@string/gallery"
            app:layout_constraintTop_toBottomOf="@id/header" />

       <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/gallery" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="40sp"
            android:layout_height="40sp"

            app:layout_constraintTop_toBottomOf="@id/gallery"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:layout_marginEnd="25sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@android:drawable/ic_input_add"
        android:onClick="addNewImage"
        android:visibility="invisible"
        android:contentDescription="@string/new_image" />

</androidx.constraintlayout.widget.ConstraintLayout>